estilos, modificaciones en el main de servicios

--- a/css/style.css
+++ b/css/style.css
@@ -158,6 +158,9 @@
     width: 100%;
     justify-content: end;
 }
+.back-nav-resposive {
+    background-color: #e9d3c0;
+}
 
 
 
@@ -176,10 +179,64 @@
     .nav-item .color-nav-a {
         color: #000 !important;
     }
-    .back-nav-resposive {
-        background-color: #e9d3c0;
-    }
+    
     .color-nav-link:hover {
         color: #a0a0a0 !important; /* Cambia al color deseado */
     }
+}
+
+
+.servios-fila {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(2, 1fr);
+}
+
+.servicios-contenedor-arriba {
+    display: grid;
+    row-gap: 3rem;
+    padding: 2rem;
+    align-items: center;
+
+}
+
+.servicios-contenedor .servicios-item {
+    
+    width: 100%;
+}
+
+.servicios-contenedor .servicios-item img {
+    height: 100%;
+    object-fit: cover;
+    width: 100%;
+}
+
+.servicios-contenedor-abajo {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(2, 1fr);
+    padding: 2rem;
+    align-items: center;
+    row-gap: 3rem;
+}
+.servicios-contenedor-abajo .servicios-item-abajo img {
+    height: 100%;
+    object-fit: cover;
+    width: 100%;
+}
+
+
+.servicios-estilos-texto h2 {
+    margin: 0;
+    text-align: center;
+    text-wrap: balance;
+    text-transform: uppercase;
+    padding: 15px 0;
+    border-bottom: solid;
+}
+
+.servicios-estilos-texto {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
 }
