--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@
     height: 70px;
 }
 
-.header .nav {
+.header nav {
     height: 70px;
 
 }
@@ -195,7 +195,7 @@
 .servicios-contenedor-arriba {
     display: grid;
     row-gap: 3rem;
-    padding: 2rem;
+    padding: 2rem 1rem;
     align-items: center;
 
 }
@@ -215,7 +215,7 @@
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: repeat(2, 1fr);
-    padding: 2rem;
+    padding: 2rem 1rem;
     align-items: center;
     row-gap: 3rem;
 }
@@ -235,8 +235,67 @@
     border-bottom: solid;
 }
 
+.servicios-estilos-texto p {
+    text-align: center;
+}
+
 .servicios-estilos-texto {
     display: flex;
     flex-direction: column;
     gap: 1rem;
+}
+
+.servicios-main h1 {
+    padding: 40px;
+    text-align: center;
+    background-color: #e8e8e8;
+    letter-spacing: 5px;
+    text-transform: uppercase;
+}
+
+/* tablet */
+@media screen and (min-width: 600px) {
+    .servicios-estilos-texto p {
+        text-align: start;
+    }
+}
+
+
+/* desktop */
+@media screen and (min-width: 1024px){
+    .servicios-contenedor-arriba {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .servicios-item {
+        display: flex;
+    }
+
+    .servicios-contenedor .servicios-item img {
+        height: 420px;
+        width: 600px;
+    }
+
+    .servicios-estilos-texto {
+        justify-content: center;
+        padding: 0 1rem;
+    }
+
+    .servicios-contenedor-abajo {
+        display: flex;
+        gap: 3rem;
+    }
+    
+    .servicios-item-abajo {
+        /* height: 500px; */
+    }
+
+    .servicios-contenedor-abajo .servicios-item-abajo img {
+        height: 35%;
+    }
+
+    .servios-fila {
+        grid-template-rows: repeat(1, 1fr);
+    }
 }
