--- a/css/style.css
+++ b/css/style.css
@@ -299,3 +299,45 @@
         grid-template-rows: repeat(1, 1fr);
     }
 }
+
+
+/* estilos nosotros */
+.nosotros-imagenes {
+    height: 50%;
+}
+
+.nosotros-imagenes img, .objetivo-contenedor-item img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+}
+
+.nosotros-section .nosotros-item, .objetivo-contenedor .objetivo-contenedor-item {
+    padding: 2rem 1rem;
+}
+
+.nosotros-item h2, .objetivo-texto-derecha h2 {
+    margin: 0;
+    text-align: center;
+    text-wrap: balance;
+    text-transform: uppercase;
+    padding: 15px 0;
+    border-bottom: solid;
+}
+
+.nosotros-item p {
+    text-align: center;
+}
+
+
+.nosotros-section .nosotros-item {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.nosotros-imagenes  {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+}
