--- a/css/style.css
+++ b/css/style.css
@@ -81,6 +81,8 @@
     background-color: #e9d3c0;
     padding: 1rem 2rem;
     gap: 1rem;
+
+    margin-top: 110px;
 }
 
 .footer-lista {
@@ -290,9 +292,9 @@
         gap: 3rem;
     }
     
-    .servicios-item-abajo {
-        /* height: 500px; */
-    }
+    /* .servicios-item-abajo {
+        height: 500px;
+    } */
 
     .servicios-contenedor-abajo .servicios-item-abajo img {
         height: 35%;
@@ -385,5 +387,87 @@
     .objetivo-contenedor-item img {
         height: 400px;
         width: 40%;
+    }
+}
+
+
+/* proyectos */
+.proyectos-main {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    padding: 3rem 1rem;
+}
+
+.galeria-proyectos img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+}
+
+.proyectos-buttons {
+    /* display: flex;
+    flex-direction: column;
+    flex-wrap: wrap; */
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    text-align: center;
+}
+
+.proyectos-buttons .button-no-seleccionado {
+    color: #000;
+    padding: 14px 30px;
+    text-decoration: none;
+    border: 1px solid #000;
+}
+
+
+.proyectos-buttons .button-no-seleccionado:hover {
+    background-color: #000;
+    color: #fff;
+
+}
+.active-proyecto-buttons {
+    color: #fff;
+    background-color: #000;
+    padding: 14px 30px;
+    text-decoration: none;
+    border: 1px solid #000;
+}
+.proyectos-main h1 {
+    text-transform: uppercase;
+    text-align: center;
+}
+
+.galeria-proyectos {
+    display: grid;
+    gap: 1rem;
+    margin-top: 40px;
+    
+}
+
+
+
+
+/* proyectos tablet */
+@media screen and (min-width: 600px) {
+    .galeria-proyectos {
+        grid-template-columns: repeat(2, 1fr);
+    }
+    
+    .proyectos-buttons {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+}
+
+/* proyectos desktop */
+@media screen and (min-width: 1024px) {
+    .galeria-proyectos {
+        grid-template-columns: repeat(5, 1fr);
+    }
+    
+    .proyectos-buttons {
+        grid-template-columns: repeat(4, 1fr);
     }
 }
