--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,10 @@
 .main-inicio {
     height: 100vh;
     position: relative;
+    z-index: -5;
 }
+
+
 
 .main-inicio img {
     height: 100%;
@@ -128,7 +131,7 @@
     position: absolute;
     margin: 0;
     height: 90%;
-    padding: 0;
+    padding: 0 1.5rem;
 }
 
 .logo-nav-responsive {
