--- a/css/style.css
+++ b/css/style.css
@@ -50,4 +50,166 @@ header nav .contenedor-nav div div ul li a:hover {
   color: #e9d3c0;
 }
 
+@keyframes banner {
+  0%, 25% {
+    background-image: url("../../img/prueba1.jpg");
+  }
+  45%, 50% {
+    background-image: url("../../img/prueba2.jpg");
+  }
+  60%, 75% {
+    background-image: url("../../img/prueba3.jpg");
+  }
+  80%, 100% {
+    background-image: url("../../img/prueba4.jpg");
+  }
+}
+.main-inicio {
+  height: 100vh;
+  position: relative;
+}
+.main-inicio .back-negro {
+  height: 100%;
+  position: absolute;
+  width: 100%;
+  z-index: 5;
+  background: rgba(0, 0, 0, 0.6392156863);
+}
+.main-inicio .img-main {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  animation: banner 9s infinite linear alternate;
+  position: absolute;
+}
+.main-inicio .main-inicio-text {
+  position: relative;
+  height: 100vh;
+  color: #fff;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  z-index: 6;
+}
+.main-inicio .main-inicio-text .inicio-texto {
+  text-align: center;
+}
+.main-inicio .main-inicio-text .inicio-texto h1 {
+  font-size: 3.4rem;
+  font-weight: 100;
+  letter-spacing: 0.25rem;
+  text-transform: uppercase;
+  z-index: 5;
+}
+.main-inicio .main-inicio-text .inicio-texto p {
+  font-size: 1.1rem;
+  font-weight: 200;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  text-align: center;
+}
+.main-inicio .main-inicio-text .inicio-texto-banner {
+  position: absolute;
+  bottom: 50px;
+  text-align: center;
+}
+.main-inicio .main-inicio-text .inicio-texto-banner h3 {
+  font-size: 0.8rem;
+  font-weight: 200;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  margin: 0 20px;
+}
+
+.servicios-main h1 {
+  padding: 40px;
+  text-transform: uppercase;
+  text-align: center;
+  background-color: #e8e8e8;
+  letter-spacing: 5px;
+}
+.servicios-main .servicios-fila {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(2, 1fr);
+}
+.servicios-main .servicios-fila .servicios-contenedor-arriba {
+  display: grid;
+  row-gap: 3rem;
+  padding: 2rem 1rem;
+  align-items: center;
+}
+.servicios-main .servicios-fila .servicios-contenedor-arriba .servicios-contenedor .servicios-item {
+  width: 100%;
+}
+.servicios-main .servicios-fila .servicios-contenedor-arriba .servicios-contenedor .servicios-item .servicios-estilos-texto {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.servicios-main .servicios-fila .servicios-contenedor-arriba .servicios-contenedor .servicios-item .servicios-estilos-texto h2 {
+  margin: 0;
+  text-transform: uppercase;
+  text-align: center;
+  text-wrap: balance;
+  padding: 15px 0;
+  border-bottom: solid;
+}
+.servicios-main .servicios-fila .servicios-contenedor-arriba .servicios-contenedor .servicios-item .servicios-estilos-texto p {
+  text-align: center;
+}
+.servicios-main .servicios-fila .servicios-contenedor-arriba .servicios-contenedor .servicios-item img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.servicios-main .servicios-fila .servicios-contenedor-abajo {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(2, 1fr);
+  padding: 2rem 1rem;
+  align-items: center;
+  row-gap: 3rem;
+}
+.servicios-main .servicios-fila .servicios-contenedor-abajo .servicios-item-abajo img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.servicios-main .servicios-fila .servicios-contenedor-abajo .servicios-item-abajo .servicios-estilos-texto h2 {
+  margin: 0;
+  text-transform: uppercase;
+  text-align: center;
+  text-wrap: balance;
+  padding: 15px 0;
+  border-bottom: solid;
+}
+
+.footer-principal {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  background-color: #a18167;
+  padding: 1rem 2rem;
+  gap: 1rem;
+  margin-top: 117px;
+}
+.footer-principal .footer-lista {
+  margin-bottom: 0;
+  font-size: 2rem;
+  display: flex;
+  justify-content: center;
+  gap: 3rem;
+  padding: 0;
+  flex-wrap: wrap;
+  color: #e9d3c0;
+}
+.footer-principal .footer-lista a {
+  color: #e9d3c0;
+}
+.footer-principal .footer-texto p {
+  margin-bottom: 0;
+}
+
 /*# sourceMappingURL=style.css.map */
