servicios en scss

--- a/scss/base/_servicios.scss
+++ b/scss/base/_servicios.scss
@@ -56,8 +56,14 @@
                 }
 
                 .servicios-estilos-texto {
+                    @include flex-direccion;
+                    gap: 1rem;
                     h2 {
                         @include servicios-style-text;
+                    }
+
+                    p {
+                        text-align: center;
                     }
                 }
             }
