--- a/css/style.css
+++ b/css/style.css
@@ -50,6 +50,10 @@ header nav .contenedor-nav div div ul li a:hover {
   color: #e9d3c0;
 }
 
+.back-nav {
+  background: #a18167;
+}
+
 @keyframes banner {
   0%, 25% {
     background-image: url("../../img/prueba1.jpg");
@@ -177,6 +181,11 @@ header nav .contenedor-nav div div ul li a:hover {
   height: 100%;
   object-fit: cover;
 }
+.servicios-main .servicios-fila .servicios-contenedor-abajo .servicios-item-abajo .servicios-estilos-texto {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
 .servicios-main .servicios-fila .servicios-contenedor-abajo .servicios-item-abajo .servicios-estilos-texto h2 {
   margin: 0;
   text-transform: uppercase;
@@ -184,6 +193,9 @@ header nav .contenedor-nav div div ul li a:hover {
   text-wrap: balance;
   padding: 15px 0;
   border-bottom: solid;
+}
+.servicios-main .servicios-fila .servicios-contenedor-abajo .servicios-item-abajo .servicios-estilos-texto p {
+  text-align: center;
 }
 
 .footer-principal {
