--- a/css/style.css
+++ b/css/style.css
@@ -71,6 +71,7 @@ header nav .contenedor-nav div div ul li a:hover {
 .main-inicio {
   height: 100vh;
   position: relative;
+  z-index: -1;
 }
 .main-inicio .back-negro {
   height: 100%;
@@ -198,6 +199,32 @@ header nav .contenedor-nav div div ul li a:hover {
   text-align: center;
 }
 
+.nosotros-main {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+.nosotros-main .nosotros-section .nosotros-item {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.nosotros-main .nosotros-section .nosotros-item h2 {
+  margin: 0;
+  text-transform: uppercase;
+  text-align: center;
+  text-wrap: balance;
+  padding: 15px 0;
+  border-bottom: solid;
+}
+.nosotros-main .objetivo-contenedor .objetivo-contenedor-item .objetivo-texto-derecha h2 {
+  margin: 0;
+  text-transform: uppercase;
+  text-align: center;
+  text-wrap: balance;
+  padding: 15px 0;
+  border-bottom: solid;
+}
 .footer-principal {
   display: flex;
   flex-direction: column;
