--- a/scss/base/_inicio.scss
+++ b/scss/base/_inicio.scss
@@ -4,7 +4,7 @@
 .main-inicio {
     height: 100vh;
     position: relative;
-
+    z-index: -1;
     .back-negro {
         height: 100%;
         position: absolute;
