--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -10,6 +10,7 @@ header {
         background-color: $color-principal;
 
         .logo-nav {
+            display: none;
             position: absolute;
             margin: 0;
             height: 90%;
