--- a/scss/base/_servicios.scss
+++ b/scss/base/_servicios.scss
@@ -2,7 +2,7 @@
 
 .servicios-main {
     h1 {
-        padding: 40px;
+        padding: 30px;
         text-transform: uppercase;
         text-align: center;
         background-color: #e8e8e8;
@@ -36,8 +36,7 @@
                     }
 
                     img {
-                        @include ancho-alto(100%, 100%);
-                        object-fit: cover
+                        @include ancho-alto-cover;
                     }
                 }
             }
