--- a/scss/utilidades/_animaciones.scss
+++ b/scss/utilidades/_animaciones.scss
@@ -1,17 +1,23 @@
 @keyframes banner {
-    0%, 25% {
+    0%,
+    20% {
         background-image: url("../../img/prueba1.jpg");
     }
-    45%, 50% {
+    25%,
+    45% {
         background-image: url("../../img/prueba2.jpg");
 
     }
-    60%, 75% {
+    50%,
+    70% {
         background-image: url("../../img/prueba3.jpg");
 
     }
-    80%, 100% {
+    75%,
+    100% {
         background-image: url("../../img/prueba4.jpg");
+        transform: scale(1.2);
+
     }
 
 }
