--- a/css/style.css
+++ b/css/style.css
@@ -46,9 +46,9 @@ header nav .contenedor-nav div div ul li .active {
 header nav .contenedor-nav div div ul li a {
   text-transform: uppercase;
   font-weight: 300;
+  transition: 0.5s ease;
 }
 header nav .contenedor-nav div div ul li a:hover {
-  transition: 0.5s ease;
   color: #e9d3c0;
 }
 
@@ -158,7 +158,7 @@ header nav .contenedor-nav div div ul li a:hover {
 }
 
 .servicios-main h1 {
-  padding: 30px;
+  padding: 40px;
   text-transform: uppercase;
   text-align: center;
   background-color: #e8e8e8;
@@ -206,6 +206,11 @@ header nav .contenedor-nav div div ul li a:hover {
   padding: 2rem 1rem;
   align-items: center;
   row-gap: 3rem;
+}
+.servicios-main .servicios-fila .servicios-contenedor-abajo .servicios-item-abajo {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
 }
 .servicios-main .servicios-fila .servicios-contenedor-abajo .servicios-item-abajo img {
   width: 100%;
@@ -436,6 +441,9 @@ header nav .contenedor-nav div div ul li a:hover {
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: auto;
     gap: 2rem;
+  }
+  .servicios-main .servicios-fila .servicios-contenedor-abajo .servicios-item-abajo img {
+    height: 300px;
   }
   .nosotros-main .nosotros-section .nosotros-item .nosotros-imagenes {
     flex-direction: row;
