--- a/scss/base/_servicios.scss
+++ b/scss/base/_servicios.scss
@@ -20,6 +20,7 @@
 
             .servicios-contenedor {
                 .servicios-item {
+                    overflow: hidden;
                     width: 100%;
 
                     .servicios-estilos-texto {
