--- a/scss/style.scss
+++ b/scss/style.scss
@@ -8,3 +8,4 @@
 @import "base/contacto";
 @import "base/mediaquerys/mq-tablet";
 @import "base/mediaquerys/mq-desktop";
+// @import "utilidades/animaciones";
