--- a/scss/utilidades/_animaciones.scss
+++ b/scss/utilidades/_animaciones.scss
@@ -1,23 +1,24 @@
+
 @keyframes banner {
     0%,
     20% {
-        background-image: url("../../img/prueba1.jpg");
+        background-image: url(../../img/1.png);
     }
+
     25%,
     45% {
-        background-image: url("../../img/prueba2.jpg");
-
+        background-image: url(../../img/Imagen4.png);
     }
+
     50%,
     70% {
-        background-image: url("../../img/prueba3.jpg");
-
+        background-image: url(../../img/Imagen20.png);
     }
+
     75%,
     100% {
-        background-image: url("../../img/prueba4.jpg");
+        background-image: url(../../img/img-barrio.jpg);
         transform: scale(1.2);
-
     }
 
 }
