--- a/scss/base/_contacto.scss
+++ b/scss/base/_contacto.scss
@@ -4,6 +4,8 @@
 .contacto-main {
     @include flex-direccion;
     gap: 4rem;
+    overflow: hidden;
+
     .contacto-formulario {
         @include flex-direccion;
         box-shadow: 0px 1px 10px rgb(0 0 0 / 59%);
@@ -47,6 +49,7 @@
         gap: 1rem;
         padding: 0 2rem;
         justify-content: center;
+
         h2 {
             @include text-estilos;
             margin: 0;
