correciones: margin, variables, link del css abajo del head

--- a/scss/base/mediaquerys/_mq-tablet.scss
+++ b/scss/base/mediaquerys/_mq-tablet.scss
@@ -10,10 +10,10 @@
         }
     }
 
-    .contacto-main {
+    /* .contacto-main {
         .contacto-formulario {
             margin: 3rem 2rem;
         }
-    }
+    } */
 
 }
