--- a/css/style.css
+++ b/css/style.css
@@ -63,7 +63,6 @@ header nav .contenedor-nav div div ul li a:hover {
   background-color: #a18167;
   padding: 1rem 2rem;
   gap: 1rem;
-  margin-top: 117px;
 }
 .footer-principal .footer-lista {
   margin-bottom: 0;
@@ -358,13 +357,13 @@ header nav .contenedor-nav div div ul li a:hover {
   flex-direction: column;
   gap: 4rem;
   overflow: hidden;
+  padding: 2rem 2rem 7rem 2rem;
 }
 .contacto-main .contacto-formulario {
   display: flex;
   flex-direction: column;
   box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.59);
   padding: 2rem 1.3rem;
-  margin: 4rem 1rem;
   gap: 1rem;
   border-radius: 50px;
 }
@@ -397,7 +396,6 @@ header nav .contenedor-nav div div ul li a:hover {
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  padding: 0 2rem;
   justify-content: center;
 }
 .contacto-main .contacto-ubicacion h2 {
@@ -416,9 +414,11 @@ header nav .contenedor-nav div div ul li a:hover {
   .proyectos-main .galeria-proyectos {
     grid-template-columns: repeat(2, 1fr);
   }
-  .contacto-main .contacto-formulario {
-    margin: 3rem 2rem;
-  }
+  /* .contacto-main {
+      .contacto-formulario {
+          margin: 3rem 2rem;
+      }
+  } */
 }
 @media screen and (min-width: 992px) {
   header nav .logo-nav {
