--- a/scss/base/_contacto.scss
+++ b/scss/base/_contacto.scss
@@ -1,16 +1,16 @@
-@import "../utilidades/mixin";
 @import "../utilidades/variables";
+@import "../utilidades/mixin";
 
 .contacto-main {
     @include flex-direccion;
     gap: 4rem;
     overflow: hidden;
+    padding: 2rem 2rem 7rem 2rem;
 
     .contacto-formulario {
         @include flex-direccion;
         box-shadow: 0px 1px 10px rgb(0 0 0 / 59%);
         padding: 2rem 1.3rem;
-        margin: 4rem 1rem;
         gap: 1rem;
         border-radius: 50px;
 
@@ -47,7 +47,6 @@
     .contacto-ubicacion {
         @include flex-direccion;
         gap: 1rem;
-        padding: 0 2rem;
         justify-content: center;
 
         h2 {
