--- a/scss/base/_inicio.scss
+++ b/scss/base/_inicio.scss
@@ -2,7 +2,7 @@
 @import "../utilidades/animaciones";
 
 .main-inicio {
-    height: 100vh;
+    height: calc(100vh - 70px);
     position: relative;
     z-index: -1;
     overflow: hidden;
@@ -25,7 +25,8 @@
 
     .main-inicio-text {
         position: relative;
-        height: 100vh;
+        height: calc(100vh - 70px);
+
         color: #fff;
         display: flex;
         flex-direction: column;
